
	* boot.pl.in (xst_boot_set_global_kw): New fn to add or modify global keywords.
	(xst_boot_set_global): New fn to add or modify globals (repsects all spaces).
	(xst_boot_del_global): Nef fn to delete globals (keywords and vars).
	(xst_boot_replace_from_table): My own version of xst_replace_from_table.
	(xst_boot_conf_set_images): Rewrote this and
	(xst_boot_conf_replace_image): this.

2001-02-20  Tambet Ingo  <tambet@ximian.com>

	* boot.pl.in (xst_boot_parse_images): New (and nice) function to get images.

	* boot-conf.in (xml_print_global_kws): New function, splitted from 
	(xml_print_globals), added more known tags.

	* boot.pl.in (xst_boot_conf_get): Use those new functions.
	(xst_boot_parse_global_kw): New function to parse global lilo.conf keyword.
	(xst_boot_parse_global): New function to parse global lilo variable.

2001-02-19  Chema Celorio  <chema@celorio.com>

	* be.pl.in (xst_buffer_save): remove this function it is
	duplicated in file.pl
	(xst_buffer_load): ditto
	(xst_buffer_clean): ditto

2001-02-19  Arturo Espinosa  <arturo@ximian.com>

	* network.pl: Ensure local host entry, by checking the internal
	  structures before writing. Run hostname.

2001-02-16  Hans Petter Jansson  <hpj@ximian.com>

	* report.pl.in: Make sure the same progress int is not printed twice.

2001-02-16  Hans Petter Jansson  <hpj@ximian.com>

	* platform.pl.in: Silence stderr output, disable early abort code.

2001-02-15  Arturo Espinosa  <arturo@ximian.com>

	* xml.pl.in: substitute &amp; entity too.

2001-02-13  Hans Petter Jansson  <hpj@ximian.com>

	* gen-reportcode-list.sh: Look in *.pl.in as well.
	* general.pl.in, platform.pl.in: Report fixups.

2001-02-12  Arturo Espinosa Aldama  <arturo@ximian.com>

	* network.pl.in: (xst_network_get_interface_{replace,parse}_table) added iface name support.
	
2001-02-12  Hans Petter Jansson  <hpj@ximian.com>

	* shares-conf.in: Fixed bug which would cause [global] section to
	  not be written in some cases.
